# Greave

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  misc.md
.github/workflows/: build_test.yml  pull_request.yml
binfiles/: CMakeLists.txt  readme.txt
binfiles/data/: anatomy.yml  generic descriptions.yml  help.yml  lists.yml  prefs.yml  tune.yml  weather.yml
binfiles/data/areas/: test-rooms.yml
binfiles/data/areas/iria/: caledonia outskirts.yml  caledonia underground.yml  caledonia-outskirts.yml  caledonia-underground.yml  caledonia.yml  eagle's watch.yml  eagles-watch.yml  guka pass.yml  guka-pass.yml  ironroot forest.yml  ironroot-forest.yml  kedozu mountain.yml  kedozu-mountain.yml  moore deepway.yml  moore-deepway.yml  temple of dhozaus.yml  temple-of-dhozaus.yml  the pit.yml  the-pit.yml  uyoga island.yml  uyoga-island.yml  white star's den.yml  white-stars-den.yml
binfiles/data/items/: core.yml  debug.yml  shields.yml  testing.yml  weapons.yml
binfiles/data/items/armour/: feet.yml  hands.yml  head.yml  inner.yml  outer.yml  shields.yml
binfiles/data/items/drinks/: booze.yml  water-containers.yml
binfiles/data/items/misc/: core.yml  debug.yml  food.yml  misc.yml  testing.yml
binfiles/data/items/monster/: armour.yml  weapons.yml
binfiles/data/items/weapons/: ammo.yml  axes.yml  bows.yml  daggers.yml  maces.yml  misc.yml  sword.yml  swords.yml
binfiles/data/lists/dynamic gear/: gear lists.yml  individual gear.yml
binfiles/data/lists/dynamic spawns/: wildlife.yml
binfiles/data/lists/dynamic-gear/: arena.yml  beastmen.yml  gear-lists.yml  individual-gear.yml  wildlife.yml
binfiles/data/lists/dynamic-spawns/: arena.yml  wildlife.yml
binfiles/data/lists/item-lists/: every-item.yml  shops.yml
binfiles/data/lists/misc/: starting gear.yml  starting-gear.yml
binfiles/data/misc/: anatomy.yml  generic descriptions.yml  generic-descriptions.yml  help.yml  prefs.yml  skills.yml  weather.yml
binfiles/data/mobiles/: arena.yml  beastmen.yml  testing.yml  wildlife.yml
docs/: CONTRIBUTING.md  README.md  branches.md  building.md
lib/win32/: BearLibTerminal.lib
lib/win64/: BearLibTerminal.lib
licenses/: bearlibterminal.txt  findsdl2ttf.txt  lodepng.txt  nanojpeg.txt  picopng.txt  randutil.txt
src/: CMakeLists.txt
src/actions/: abilities.cc  abilities.cpp  abilities.h  abilities.hpp  ai.cc  ai.cpp  ai.h  ai.hpp  arena.cc  arena.cpp  arena.h  arena.hpp  cheat.cc  cheat.cpp  cheat.h  cheat.hpp  combat.cc  combat.cpp  combat.h  combat.hpp  doors.cc  doors.cpp  doors.h  doors.hpp  eat-drink.cc  eat-drink.cpp  eat-drink.h  eat-drink.hpp  help.cc  help.cpp  help.h  help.hpp  inventory.cc  inventory.cpp  inventory.h  inventory.hpp  look.cc  look.cpp  look.h  look.hpp  (+13 more)
src/actions/combat/: combat.cpp  combat.hpp  melee.cpp  melee.hpp
src/combat/: combat.cpp  combat.hpp  melee.cpp  melee.hpp
src/core/: app-icon.rc  bones.cc  bones.cpp  bones.h  bones.hpp  core-constants.cc  core-constants.h  core.cc  core.cpp  core.h  core.hpp  filex.cc  filex.cpp  filex.h  filex.hpp  greave.hpp  guru.cc  guru.cpp  guru.h  guru.hpp  list.cc  list.cpp  list.h  list.hpp  mathx.cc  mathx.cpp  mathx.h  mathx.hpp  message.cc  message.cpp  message.h  message.hpp  parser.cc  parser.cpp  parser.h  parser.hpp  prefs.cc  prefs.cpp  prefs.h  prefs.hpp  (+29 more)
src/debug/: parser.cpp  parser.hpp  sim-damage.cpp  sim-damage.hpp
src/terminal/: terminal-blt.cpp  terminal-blt.hpp  terminal-curses.cpp  terminal-curses.hpp  terminal.hpp
src/uni/: uni-core.hpp  uni-system.hpp  uni-tolk.hpp
src/utility/: filex.cpp  filex.hpp  mathx.cpp  mathx.hpp  strx.cpp  strx.hpp
src/world/: ai.cpp  ai.hpp  inventory.cc  inventory.cpp  inventory.h  inventory.hpp  item.cc  item.cpp  item.h  item.hpp  mobile.cc  mobile.cpp  mobile.h  mobile.hpp  npc.cpp  npc.hpp  player.cc  player.cpp  player.h  player.hpp  readme.txt  room.cc  room.cpp  room.h  room.hpp  shop.cc  shop.cpp  shop.h  shop.hpp  time-weather.cc  time-weather.cpp  time-weather.h  time-weather.hpp  world.cc  world.cpp  world.h  world.hpp
